Test/errors/err_unique_not_a_field.cb
// `unique` is a FIELD qualifier: it only means something where a destructor is
// synthesized. On a local there is no owner to attach the delete to, so silently
// ignoring it would promise an ownership transfer the compiler never performs.
struct N { int v = 0; };

extern int main()
{
    expect_error("'unique' is only allowed on a struct field");
    unique N* p = nullptr;
    return 0;
}
